# PonderadaOpenCV

./: Cargo.toml  Dioxus.toml  README.md
src/: imageProcess.rs  image_process.rs  main.rs  ui.rs
