[bundle]
identifier = "Ianzin"

[package]
name = "app-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0" }
web-sys = { version = "0.3.77", features = ["Storage"] }
rfd = "0.12.0"
dioxus-desktop = "0.6.3"
walkdir = "2.4.0"
anyhow = "1.0"
kamadak-exif = "0.5.5"
regex = "1.11.1"
opencv = { version = "0.94.4" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
